# django-project-mysite

./: Dockerfile  docker-compose.yaml  pyproject.toml
mysite/mysite/: settings.py
