[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["Irina <IISimmail@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.0"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.14.0"
django-filter = "^23.5"
django-debug-toolbar = "^4.2.0"
pillow = "^10.1.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
